fix: fix error text overflow in deposit modal (#88)

--- a/src/assets/style/_default.scss
+++ b/src/assets/style/_default.scss
@@ -12,6 +12,7 @@
 
 .errorText {
   color: $red;
+  overflow-wrap: break-word;
 }
 
 .modal-position {
