--- a/src/assets/style/components/_walletAddress.scss
+++ b/src/assets/style/components/_walletAddress.scss
@@ -24,6 +24,7 @@
       width: 100%;
       color: $red;
       font-size: 12px;
+      overflow-wrap: break-word;
     }
 
     .domainAddress {
